--- a/packages/component/tsconfig.json
+++ b/packages/component/tsconfig.json
@@ -6,7 +6,6 @@
     "lib": ["DOM", "ESNext"],
     "strict": true,
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
     "incremental": true,
     "skipLibCheck": true,
     "moduleResolution": "node",
@@ -18,20 +17,13 @@
     "emitDeclarationOnly": true,
     "outDir": "./dist",
     "types": [
+      "node",
       "vite/client",
     ],
     "paths": {
       "~/*": ["src/*"]
     }
   },
-  "include": ["src"],
-  "exclude": [
-    "node_modules",
-    "**/**/*.test.ts",
-    "**/**/*.stories.tsx",
-    "**/**/*.md",
-    "**/dist",
-    "packages/.test",
-    "packages/_docs"
-  ]
+  "include": ["env.d.ts", "src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
