--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -9,6 +9,7 @@
     "vue": "^3.2.0"
   },
   "devDependencies": {
+    "@pe/vue-component-modal": "./../component",
     "@types/node": "^18.0.0",
     "@vitejs/plugin-vue": "^3.0.0",
     "typescript": "^4.6.0",
