--- a/packages/component/package.json
+++ b/packages/component/package.json
@@ -10,6 +10,9 @@
   "devDependencies": {
     "@types/node": "^18.0.0",
     "@vitejs/plugin-vue": "^3.0.0",
+    "bootstrap-3": "npm:bootstrap@^3.0",
+    "bootstrap-4": "npm:bootstrap@^4.0",
+    "bootstrap-5": "npm:bootstrap@^5.0",
     "typescript": "^4.6.0",
     "vite": "^3.0.0",
     "vue": "^3.2.0",
